[project]
name = "copyem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Milin Kodnongbua", email = "mil.millin@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "black>=25.9.0",
    "blessings>=1.7",
    "dashing>=0.1.0",
    "fire>=0.7.1",
    "textual>=6.1.0",
]

[project.scripts]
copyem = "copyem:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
]
